--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
@@ -1,10 +1,22 @@
 <form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
-	<div class="form-group">
+	<div class="container-fluid">
 		<div class="form-group">
-			<label for="login">Login:</label> <input class="form-control" formControlName="email" type="text" placeholder="Your login or email" />
+			<label for="login">Login:</label>
+			<div class="input-group">
+				<div class="input-group-addon">
+					<span class="glyphicon glyphicon-user"></span>
+				</div>
+				<input class="form-control" formControlName="email" type="text" placeholder="Your login or email" />
+			</div>
 		</div>
 		<div class="form-group">
-			<label for="password">Password:</label> <input class="form-control" formControlName="password" type="password" placeholder="Your password" />
+			<label for="password">Password:</label>
+			<div class="input-group">
+				<div class="input-group-addon">
+					<span class="glyphicon glyphicon-lock"></span>
+				</div>
+				<input class="form-control" formControlName="password" type="password" placeholder="Your password" />
+			</div>
 		</div>
 		<button class="btn btn-primary" type="submit">Log in</button>
 	</div>
