--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.registration.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.registration.html
@@ -43,7 +43,12 @@
 				</div>
 				<div class="form-group row col-xs-12">
 					<div class=" col-xs-12">
-						<button type="submit" class="btn btn-primary">Register</button>
+						<button (click)="cancel()" type="button" class="btn btn-danger">
+							<span class="glyphicon glyphicon-remove"></span> cancel
+						</button>
+						<button type="submit" class="btn btn-primary">
+							<span class="glyphicon glyphicon-ok"></span> Register
+						</button>
 					</div>
 				</div>
 			</div>
