--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/app.left.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/app.left.html
@@ -1,3 +1,6 @@
 <div class="left">
-    <h1>Left</h1>
+	&nbsp;
+	<div class="container-fluid">
+    	<search-min>Search min</search-min>
+    </div>
 </div>
