--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.registration.modal.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.registration.modal.html
@@ -13,7 +13,7 @@
 					<button (click)="cancel(); professionalRegistrationModal.close()" type="button" class="btn btn-danger">
 						<span class="glyphicon glyphicon-remove"></span> cancel
 					</button>
-					<button (click)="register(); professionalRegistrationModal.close()" type="submit" class="btn btn-primary">
+					<button (click)="register(); professionalRegistrationModal.close()" type="button" class="btn btn-primary">
 						<span class="glyphicon glyphicon-ok"></span> Register
 					</button>
 				</div>
