--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
@@ -1,23 +1,30 @@
-<form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
-	<div class="container-fluid">
-		<div class="form-group">
-			<label for="login">Login:</label>
-			<div class="input-group">
-				<div class="input-group-addon">
-					<span class="glyphicon glyphicon-user"></span>
+<div class="login-container">
+	<div class="login-content">
+		<form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
+			<div class="container-fluid">
+				<div class="form-group">
+					<label for="login">Login:</label>
+					<div class="input-group">
+						<div class="input-group-addon">
+							<span class="glyphicon glyphicon-user"></span>
+						</div>
+						<input class="form-control" formControlName="email" type="text" placeholder="Your login or email" />
+					</div>
 				</div>
-				<input class="form-control" formControlName="email" type="text" placeholder="Your login or email" />
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="password">Password:</label>
-			<div class="input-group">
-				<div class="input-group-addon">
-					<span class="glyphicon glyphicon-lock"></span>
+				<div class="form-group">
+					<label for="password">Password:</label>
+					<div class="input-group">
+						<div class="input-group-addon">
+							<span class="glyphicon glyphicon-lock"></span>
+						</div>
+						<input class="form-control" formControlName="password" type="password" placeholder="Your password" />
+					</div>
 				</div>
-				<input class="form-control" formControlName="password" type="password" placeholder="Your password" />
+				<button class="btn btn-primary pull-right" type="submit">Log in</button>
 			</div>
-		</div>
-		<button class="btn btn-primary" type="submit">Log in</button>
+		</form>
 	</div>
-</form>
+</div>
+<div id="new-account-div">
+	<button (click)="showRegistrationComponent()" class="btn btn-default" type="submit">Or create your account</button>
+</div>
