--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
@@ -1,6 +1,6 @@
 <div class="login-container">
 	<div class="login-content">
-		<form [formGroup]="loginForm" (ngSubmit)="doLogin($event)">
+		<form [formGroup]="loginForm" (ngSubmit)="doLogin($event)" #f="ngForm" novalidate>
 			<div class="container-fluid">
 				<div class="form-group">
 					<label for="login">Login:</label>
@@ -10,6 +10,7 @@
 						</div>
 						<input class="form-control" formControlName="email" type="text" placeholder="Your login or email" />
 					</div>
+					<div *ngIf="f.submitted && loginForm.value.email == ''" class="help-block">Username is required</div>
 				</div>
 				<div class="form-group">
 					<label for="password">Password:</label>
@@ -19,6 +20,7 @@
 						</div>
 						<input class="form-control" formControlName="password" type="password" placeholder="Your password" />
 					</div>
+					<div *ngIf="f.submitted && loginForm.value.password == ''" class="help-block">Password is required</div>
 				</div>
 				<button class="btn btn-primary pull-right" type="submit">Log in</button>
 			</div>
