little by little

--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.home.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/professional.home.html
@@ -1,1 +1,11 @@
-<div><h1>Professional home component</h1></div>
+<tabset [pills]="false">
+    <tab title="Planning">
+        <professional-planning>Planning</professional-planning>
+    </tab>
+    <tab title="Holidays">
+        <professional-holiday>Holidays</professional-holiday>
+    </tab>
+    <tab title="Appointments">
+        <professional-appointment>Appointments</professional-appointment>
+    </tab>
+</tabset>
