--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/app/template/login.html
@@ -5,7 +5,7 @@
 			<div class="container-fluid">
 				<div class="form-group">
 					<label for="login">Login:</label>
-					<div class="input-group">
+					<div class="input-group" [ngClass]="{ 'has-error': f.submitted && loginForm.value.login == '' }">
 						<div class="input-group-addon">
 							<span class="glyphicon glyphicon-user"></span>
 						</div>
@@ -15,7 +15,7 @@
 				</div>
 				<div class="form-group">
 					<label for="password">Password:</label>
-					<div class="input-group">
+					<div class="input-group" [ngClass]="{ 'has-error': f.submitted && loginForm.value.password == '' }">
 						<div class="input-group-addon">
 							<span class="glyphicon glyphicon-lock"></span>
 						</div>
